--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 body{
     background-color: #FFA687;
+    background-image: url(imagens/vivara-background11.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+
+}
+
+
+header{
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
@@ -9,12 +22,17 @@ body{
     height: 100px;
 }
 
+
+form{
+    margin-top: 40px;
+}
+
 .container-login{
-    margin: 0 auto;
+    margin-left: 200px ;
     border-style: solid;
     width: 300px;
     border-radius: 20px;
-    height: 340px;
+    height: 370px;
     background-color: #F8F8F8;
     box-shadow: -1px 2px 10px black;
 
@@ -24,7 +42,13 @@ body{
 .vivara-logo2{
     text-align: center;
     width: 300px;
+    height: 70px;
+    margin-top: 40px;
 
+
+}
+
+.vivara-logo2>img{
 }
 
 .login{
@@ -69,8 +93,15 @@ body{
     background-color: #FFA687;
 }
 
+.entrar>button:hover{
+    background-color: white;
+    cursor: pointer;
+}
+
 
 label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
+
+
