--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 html, body{
     margin: 0;
     background-color: #4F0B05;
-    background-image: url(imagens/vivara-background11.png);
+    background-image: url(https://i.postimg.cc/FzRh7Zd7/vivara-background11.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 @media (max-width: 1024px) {
   body {
-    background-image: url("imagens/vivara-background-12.png");
+    background-image: url("https://i.postimg.cc/vTkwDdwN/vivara-background-12.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -17,7 +17,7 @@ html, body{
 
 @media (max-width: 500px) {
   body {
-    background-image: url("imagens/vivara-background-13.png");
+    background-image: url("https://i.postimg.cc/HsY68NkS/vivara-background-13.png");
     background-size: cover;
     background-position: left center;
   }
